libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/access-1.jsonc
//@ run: fail
//@ description: access/1 should error out
["::kernel::special_form::access", "x"]
//~^ ERROR expected 2 arguments to `.`, found 1
